Remove bottom row so blocks stop on visible bottom
Add `display: none;` to bottom row of grid so that the blocks stop on
the bottom-most visible row, but still stop on top of other blocks

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
   width: 20px;
 }
 
+.grid .bottom {
+  display: none;
+}
+
 .grid .shape {
   background-color: blue;
 }
